<resources>
    <string name="app_name">KalQLeytor</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">x</string>
    <string name="divide">/</string>
    <string name="cancel">C</string>
    <string name="exit">EXIT</string>
    <string name="first_number_hint">Unang Numero</string>
    <string name="second_number_hint">Ikaduhang Numero</string>
</resources>
