<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtFirstNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_number_hint"
            android:singleLine="true"
            app:met_floatingLabel="highlight" />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtSecondNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_number_hint"
            android:singleLine="true"
            app:met_floatingLabel="highlight" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:rv_color="@color/primaryColorLight">

                    <Button
                        android:background="@color/primaryColor"
                        android:id="@+id/btnAdd"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/plus"
                        android:textSize="@dimen/operator_text_size" />
                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:rv_color="@color/primaryColorLight">

                    <Button
                        android:background="@color/primaryColor"
                        android:id="@+id/btnMinus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/minus"
                        android:textSize="@dimen/operator_text_size" />
                </com.andexert.library.RippleView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:rv_color="@color/primaryColorLight">

                    <Button
                        android:background="@color/primaryColor"
                        android:id="@+id/btnMultiply"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/multiply"
                        android:textSize="@dimen/operator_text_size" />
                </com.andexert.library.RippleView>

                <com.andexert.library.RippleView
                    rv_centered="true"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:rv_color="@color/primaryColorLight">

                    <Button
                        android:background="@color/primaryColor"
                        android:id="@+id/btnDivide"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/divide"
                        android:textSize="@dimen/operator_text_size" />
                </com.andexert.library.RippleView>

            </LinearLayout>
        </LinearLayout>

        <com.andexert.library.RippleView
            rv_centered="true"
            android:layout_margin="2dp"
            android:layout_width="500dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:rv_color="@color/primaryColorLight">

            <Button
                android:background="@color/primaryColor"
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textSize="@dimen/cancel_text_size"
                android:textStyle="bold" />
        </com.andexert.library.RippleView>

    </LinearLayout>

    <com.andexert.library.RippleView
        rv_centered="true"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exit_button_height"
        app:rv_color="@color/primaryColorLight">

        <Button
            android:background="@color/primaryColor"
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/exit"
            android:textSize="@dimen/exit_text_size" />
    </com.andexert.library.RippleView>

</GridLayout>
